--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,6 @@ body {
 }
 
 header {
-    max-width: 700px;
     margin: 20px auto 20px;
 }
 
@@ -40,7 +39,6 @@ h1, h3 {
 
 .flip-container:hover .flipper, .flip-container.hover .flipper {
     transform: rotateY(180deg);
-    -webkit-transform: rotateY(180deg);
 }
 
 .flip-container, .front, .back {
@@ -76,7 +74,6 @@ h1, h3 {
     z-index: 2;
     /* for firefox 31 */
     transform: rotateY(0deg);
-    -webkit-transform: rotateY(0deg);
 }
 
 
@@ -84,7 +81,6 @@ h1, h3 {
 
 .back {
     transform: rotateY(180deg);
-    -webkit-transform: rotateY(180deg);
 }
 
 
@@ -93,12 +89,10 @@ END ANIMATED HEADER
 ****************** */
 
 .container {
-    max-width: 700px;
-    padding: 100px;
-    padding-top: 40px;
-    margin: auto;
-    margin-top: 20px;
     background-color: white;
+    max-width: 700px;
+    padding: 40px 100px;
+    margin: 20px auto;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
@@ -133,7 +127,6 @@ hr {
 /*Social components */
 
 .social {
-    background-color: white;
     padding: auto;
     transition: 0.3s;
     padding: 5px 0px;
@@ -154,54 +147,24 @@ hr {
     color: #0077B5;
 }
 
-#linkedin:hover {
-    color: white;
-    background-color: #0077B5;
-}
-
 #github {
     color: #0D2636;
-}
-
-#github:hover {
-    color: white;
-    background-color: #0D2636;
 }
 
 #twitter {
     color: #1DA1F2;
 }
 
-#twitter:hover {
-    color: white;
-    background-color: #1DA1F2;
-}
-
 #gmail {
     color: #C91406;
-}
-
-#gmail:hover {
-    background-color: #C91406;
-    color: white;
 }
 
 #skype {
     color: #10B4F1;
 }
 
-#skype:hover {
-    background-color: #10B4F1;
-    color: white;
-}
-
 #messenger {
-    color: #0084FF;
-}
-
-#messenger:hover {
-    background-color: #0084FF;
-    color: white;
+    & color: #0084FF;
 }
 
 .social .social-content {
@@ -224,4 +187,43 @@ a {
 a:visited {
     text-decoration: none;
     color: black;
+}
+
+
+/* Socials icons */
+
+.socials-icons {
+    text-align: center;
+}
+
+.socials-icons i {
+    transition: 0.2s;
+}
+
+.socials-icons i:hover {
+    margin: auto 15px;
+    padding: auto 5px;
+    transform: scale(1.75);
+}
+
+.socials-icons #gmail:hover {
+    margin: auto 18px !important;
+}
+
+.icon {
+    display: inline-block;
+}
+
+
+/* ----------------- */
+/* RESPONSIVE DESIGN */
+/* ------------------*/
+
+@media screen and (max-width: 600px) {
+    .container {
+        /*background-color: grey;*/
+        padding: 20px 30px;
+        margin: 40px auto;
+        box-shadow: none;
+    }
 }
