--- a/css/terminal.css
+++ b/css/terminal.css
@@ -5,6 +5,7 @@
     margin: 20px auto;
     border-radius: 5px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    z-index: 1;
 }
 
 .terminal-top-bar {
